2002-07-03  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (am_macro_for_var): Add LIBTOOL.
	(ac_macro_for_var): Add RANLIB.
	(seen_libtool): Remove.
	(handle_libtool, lang_c_finish,	define_compiler_variable,
	make_paragraphs): Use
	variable_defined ('LIBTOOL') instead of $seen_libtool.
	(handle_languages) <%transform>: Don't set 'LIBTOOL', it is
	already done in make_paragraphs.
	(handle_libraries): Simplify by requiring RANLIB with
	&require_variables_for_macro.
	(handle_ltlibraries): Simplify by requiring LIBTOOL with
	&require_variables_for_macro.
	(scan_autoconf_traces): Don't trace for AC_PROG_LIBTOOL and
	AM_PROG_LIBTOOL.
	* tests/libtool4.test, tests/library2.test: New files.
	* tests/Makefile.in (TESTS): Add libtool4.test and library2.test.

2002-07-02  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (create, keyed_aclocal_warning): Delete, unused.

2002-07-01  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (ac_macro_for_var): Add YACC.

2002-07-01  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Handle multiple suffix rules with the same input extension.
	For PR automake/37.

	* automake.in (suffix_rules_default): New variable.
	(suffix_rules): Redefine as a hash of hashes of pairs.
	(initialize_per_input): Setup suffix_rules_default from
	suffix_rules on first call, an override suffix_rules
	with suffix_rules_default on following calls.
	(struct) <output_extensions>: New attribute.
	(register_language): Set the default for output_extensions.
	Call register_suffix_rule for each suffix.
	(derive_suffix, handle_languages): Adjust to the new definition
	of $suffix.
	(register_suffix_rule): New function.
	(rule_define): Call register_suffix_rule.
	* tests/suffix8.test, tests/suffix9.test, tests/suffix10.test:
	New files.
	* tests/Makefile.am (TESTS): Add them.

2002-06-30  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (am_macro_for_var, ac_macro_for_var,
	required_variables): New variables.