@@ -27,6 +27,14 @@ $AUTOMAKE 2>stderr && exit 1
 cat stderr
 grep AM_PROG_AS stderr
 
+# On fast machines the autom4te.cache created during the above run of
+# $AUTOMAKE is likely to have the same time stamp as the configure.in
+# created below; thus causing traces for the old configure.in to be
+# used.  We could do `sleep 2', but it's faster to erase the
+# directory.  (Erase autom4te*.cache, not autom4te.cache, because some
+# bogus installations of Autoconf use a versioned cache.)
+rm -rf autom4te*.cache
+
 # We still need CCAS.
 echo 2
 cat > configure.in << 'END'
@@ -43,6 +51,7 @@ cat stderr
 grep CCAS stderr
 grep AM_PROG_AS stderr
 
+rm -rf autom4te*.cache
 
 # We need CCASFLAGS.
 echo 3
@@ -61,6 +70,7 @@ cat stderr
 grep CCASFLAGS stderr
 grep AM_PROG_AS stderr
 
+rm -rf autom4te*.cache
 
 # We have every needed, expect a success.
 echo 4
@@ -77,6 +87,7 @@ END
 $ACLOCAL
 $AUTOMAKE
 
+rm -rf autom4te*.cache
 
 # We have every needed, expect a success.
 echo 5
