@@ -1,3 +1,7 @@
+2002-07-04  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* tests/asm.test: Erase Autom4te's cache between each test.
+
 2002-07-03  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* automake.in (am_macro_for_var): Add LIBTOOL.
